--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
     "@radix-ui/themes": "^3.1.1",
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,6 +21,7 @@
     "lucide-react": "^0.407.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-activity-calendar": "^2.1.5",
@@ -43,5 +44,8 @@
     "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "18.20.4"
   }
 }
