--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/themes": "^3.1.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
