--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "next-auth": "^4.24.7",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "random-words": "^2.0.1",
     "react": "^18",
     "react-activity-calendar": "^2.1.5",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-email": "2.1.6",
     "react-hook-form": "^7.52.1",
+    "react-word-checker": "^1.1.1",
     "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
