--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wordle",
+  "type":"module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "start-cron": "node .src/lib/cron.js"
+    "start-cron": "ts-node ./src/lib/cron.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -23,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cron": "^3.1.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.407.0",
     "mongoose": "^8.4.3",
@@ -41,13 +43,16 @@
     "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cron": "^2.4.0",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.14.15",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -57,7 +62,7 @@
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   },
   "volta": {
     "node": "18.20.4"
