--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordle",
-  "type":"module",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "start-cron": "ts-node ./src/lib/cron.ts"
+    "start-cron": "npx tsx ./src/lib/cron.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -62,6 +62,7 @@
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   },
   "volta": {
