--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "npx prisma generate && next build && npx tsx ./src/lib/cron.ts ",
+    "build": "npx prisma generate && next build",
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
