removed cron-start

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "start-cron": "npx tsx ./src/lib/cron.ts"
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
